// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component Should not render ListItem with ripple if is selected 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="list-item-wrapper"
>
  <View
    onPress={[MockFunction]}
    selected={true}
    style={
      Array [
        Object {
          "backgroundColor": "#f4ab3416",
          "minHeight": 48,
        },
      ]
    }
    testID="list-item"
  >
    <Text>
      Text
    </Text>
  </View>
</View>
`;

exports[`ListItem component Should render ListItem component correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "minHeight": 48,
        },
      ]
    }
    testID="list-item"
  >
    <Text>
      Text
    </Text>
  </View>
</View>
`;

exports[`ListItem component Should render ListItem with ripple if is clickable 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="list-item-wrapper"
>
  <View
    onPress={[MockFunction]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "minHeight": 48,
        },
      ]
    }
    testID="list-item"
  >
    <Text>
      Text
    </Text>
  </View>
</View>
`;

exports[`ListItem component Should render ListItem with state selected 1`] = `
<View>
  <View
    selected={true}
    style={
      Array [
        Object {
          "backgroundColor": "#f4ab3416",
          "minHeight": 48,
        },
      ]
    }
    testID="list-item"
  >
    <Text>
      Text
    </Text>
  </View>
</View>
`;
